--- a/_config.yml
+++ b/_config.yml
@@ -7,17 +7,17 @@ description: |
   Yokohama, Japan
 
   June 16, 2019
-owner: Terrell + Ayako Broomer # or company name
+owner: Ayako + Terrell Broomer # or company name
 first_published: 2018 # if migrating another site, the year of your first publish
 email: domofactor@github.com
 baseurl: "/wedding" # the subpath of your site, e.g. /blog
 url: "https://tanda.github.io" # the base hostname & protocol for your site
 social:
-  twitter: https://twitter.com/<username>
-  github: https://github.com/<username>
-  linkedin-square: https://linkedin.com/in/<username>
-  facebook-official: https://facebook.com/<username>
-  google-plus-square: https://plus.google.com/u/0/+<username>
+  #twitter: https://twitter.com/<username>
+  github: https://github.com/tanda
+  #linkedin-square: https://linkedin.com/in/<username>
+  #facebook-official: https://facebook.com/<username>
+  #google-plus-square: https://plus.google.com/u/0/+<username>
   #email: /contact/
   #flickr:
   #instagram:
