add schedule to the site description

--- a/_config.yml
+++ b/_config.yml
@@ -7,6 +7,10 @@ description: |
   Yokohama, Japan
 
   June 16, 2019
+
+  Check-in: 3:30pm |
+  Ceremony: 4:00pm |
+  Reception: 5:00pm
 owner: Ayako + Terrell Broomer # or company name
 first_published: 2018 # if migrating another site, the year of your first publish
 email: domofactor@github.com
