update some of the japanese

--- a/_config.yml
+++ b/_config.yml
@@ -16,13 +16,13 @@ description:
     Ceremony: 4:00pm |
     Reception: 5:00pm
   jp: |
-    横浜, みなとみらい
+    みなとみらい
 
     ２０１９年６月１９日
 
-    Check-in: 15:30時 |
-    Ceremony: 16:00時 |
-    Reception: 17:00時
+    受 付: 15:30 |
+    挙 式: 16:00 |
+    披露宴: 17:00
 owner: Ayako + Terrell Broomer # or company name
 first_published: 2018 # if migrating another site, the year of your first publish
 email: domofactor@github.com
