change jp to ja and use lang variable as much as possible

--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@
 # Site settings
 title:
   en: Ayako + Terrell
-  jp: あやこ + テレル
+  ja: あやこ + テレル
 
 description:
   en: |
@@ -15,7 +15,7 @@ description:
     Check-in: 3:30pm |
     Ceremony: 4:00pm |
     Reception: 5:00pm
-  jp: |
+  ja: |
     みなとみらい
 
     ２０１９年６月１９日
